--- a/aboutme.html
+++ b/aboutme.html
@@ -54,10 +54,11 @@
 				<ul>
 					<li>Java</li>
 					<li>Python</li>
+					<li>C++</li>
 					<li>SQL</li>
+					<li>MQL</li>
 					<li>Golang</li>
 					<li>OCaml</li>
-					<li>C/C++</li>
 					<li>JavaScript</li>
 					<li>HTML/CSS (e.g. this <a href="https://github.com/militsasotirova/militsasotirova.github.io"
 							target="_blank">website</a>!)</li>
@@ -69,10 +70,9 @@
 					target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
 					href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 					<br>
-				<p>Hello! I am a third year student at Cornell University (Engineering School)
-					pursuing a Computer Science major and a Business minor. I am 
-					pursuing a career in parallel & distributed systems and/or security.
-					I'm currently working on the 
+				<p>Hello! I am a senior at Cornell University pursuing both a Bachelor of Science and a 
+					Master of Engineering in Computer Science. This past summer I interned at MongoDB where I worked 
+					on the Query Optimization team (more information can be found <a href="./experience.html#mongo-card">here</a>). On campus, I'm involved in the
 					<strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS) project,
 					which
 					is a simulation that models nutrient flow through a farm system based on user inputs as well as published
@@ -80,7 +80,7 @@
 					More information can be found <a href="./experience.html#rufas-card">here</a>.</p>
 				<br>
 				
-				<p>In my spare time, you can find me reading books, drawing, biking, and swimming.
+				<p>In my free time, I enjoy reading and spending time outdoors!
 				</p>
 			</div>
 		</div>
