--- a/education.html
+++ b/education.html
@@ -53,10 +53,13 @@
 
 			<div class="education-grid-item">
 				<h2>Cornell University</h2>
-				<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
-				<h3>August 2018 - December 2021 in Ithaca, NY</h3>
+				<h3>MEng in Computer Science (August 2021 - May 2022 in Ithaca, NY)</h3>
+				<h3>BS in Computer Science (Engineering School), Dyson Business minor (August 2018 - December 2021 in Ithaca, NY)</h3>
 				<p>Relevant coursework for my computer science interests:</p>
 				<ul>
+					<li>Database Systems</li>
+					<li>The Structure of Information Networks</li>
+					<li>System Security</li>
 					<li>Compilers & Compilers Practicum</li>
 					<li>Distributed Computing Principles</li>
 					<li>Cryptography</li>
