--- a/education.html
+++ b/education.html
@@ -61,9 +61,12 @@
 					<li>The Structure of Information Networks</li>
 					<li>System Security</li>
 					<li>Compilers & Compilers Practicum</li>
+					<li>Advanced Programming Languages</li>
 					<li>Distributed Computing Principles</li>
 					<li>System Security</li>
 					<li>Database Systems</li>
+					<li>Cloud Computing</li>
+					<li>Software Engineering</li>
 					<li>The Structure of Info Networks</li>
 					<li>Cryptography</li>
 					<li>Computer Networks</li>
@@ -72,6 +75,8 @@
 					<li>Introduction to Analysis of Algorithms</li>
 					<li>Embedded Systems</li>
 					<li>Data Structures and Functional Programming</li>
+					<li>Computer Science Colloquium</li>
+					<li>Seminar in Database Systems</li>
 				</ul>
 			</div>
 
