--- a/experience.html
+++ b/experience.html
@@ -104,12 +104,10 @@
 							<p style="float: right;"><img class="project-img" src="./images/cow.png" alt="dice"></p>
 						</div>
 
-						<p>I am designing, developing, maintaining, and testing a Python application for nutrient flow 
-							through a farm system. I collaborate with student team members and professors from universities 
-							nationwide. I have multiple roles in this project, one being a technical lead: earlier this 
-							year, I introduced the usage of databases in the project to store input and output data and 
-							I have continued to work on this project. I am also involved in programming model developments, 
-							mentoring new team members, and performing code reviews. Furthermore, I co-authored 
+						<p>I worked on designing, developing, maintaining, and testing a Python application for nutrient flow 
+							through a farm system. I collaborated with student team members and professors from universities 
+							nationwide. I introduced the usage of databases in the project to store input and output data.
+							Furthermore, I co-authored 
 							<a href="https://www.mdpi.com/2076-2615/11/5/1373">this paper</a> which discusses the model's features and structure.
 						</p>
 					
@@ -123,12 +121,12 @@
 						<span class="close" id="rufasSpan">&times;</span>
 						<p>RuFaS is a simulation written in Python that models nutrient flow through a farm system based
 							on user inputs as well as published research. There are four main modules: animal, soil, manure,
-							and crop, and I primarily work in the animal module. This is an interdisciplinary project that performs
+							and crop, and I primarily worked in the animal module. This is an interdisciplinary project that performs
 							a computer simulation of an
 							animal/farm system. Even though I have no background in animal or farm science, I have contributed a
 							significant amount to the code base for the simulation:</p>
 						<ul>
-							<li>I am currently the techical lead of the output and data analysis team, where we are 
+							<li>I was the techical lead of the output and data analysis team, where we are 
 								working to implement different options for data export and analysis for a more complete
 								set of model outputs.
 							</li>
