--- a/experience.html
+++ b/experience.html
@@ -97,7 +97,8 @@
 				<a id="rufas-card"></a>
 				<div class="card" id="rufas" name="rufas-card">
 					
-						<h2><strong>Ruminant Farm Systems Developer</strong></h2>
+						<h2><strong>
+							<a href="http://rufas.org">Ruminant Farm Systems Developer</a></strong></h2>
 						<h3><i>November 2018 - May 2022 (Cornell University, Ithaca NY</i>)</h3>
 
 						<div>
