--- a/experience.html
+++ b/experience.html
@@ -97,19 +97,18 @@
 				<a id="rufas-card"></a>
 				<div class="card" id="rufas" name="rufas-card">
 					
-						<h2><strong>
-							<a href="http://rufas.org">Ruminant Farm Systems Developer</a></strong></h2>
+						<h2><strong>Ruminant Farm Systems Developer</strong></h2>
 						<h3><i>November 2018 - May 2022 (Cornell University, Ithaca NY</i>)</h3>
 
 						<div>
 							<p style="float: right;"><img class="project-img" src="./images/cow.png" alt="dice"></p>
 						</div>
 
-						<p>I worked on designing, developing, maintaining, and testing a Python application for nutrient flow 
+						<p><a href="http://rufas.org" target="_blank">RuFaS Website.</a> I worked on designing, developing, maintaining, and testing a Python application for nutrient flow 
 							through a farm system. I collaborated with student team members and professors from universities 
 							nationwide. I introduced the usage of databases in the project to store input and output data.
 							Furthermore, I co-authored 
-							<a href="https://www.mdpi.com/2076-2615/11/5/1373">this paper</a> which discusses the model's features and structure.
+							<a href="https://www.mdpi.com/2076-2615/11/5/1373" target="_blank">this paper</a> which discusses the model's features and structure.
 						</p>
 					
 				</div>
