--- a/aboutme.html
+++ b/aboutme.html
@@ -70,14 +70,8 @@
 					target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
 					href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 					<br>
-				<p>Hello! I am a senior at Cornell University pursuing both a Bachelor of Science and a 
-					Master of Engineering in Computer Science. This past summer I interned at MongoDB where I worked 
-					on the Query Optimization team (more information can be found <a href="./experience.html#mongo-card">here</a>). On campus, I'm involved in the
-					<strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS) project,
-					which
-					is a simulation that models nutrient flow through a farm system based on user inputs as well as published
-					research.
-					More information can be found <a href="./experience.html#rufas-card">here</a>.</p>
+				<p>Hello! I am a software engineer at MongoDB. I graduated Cornell University with both a Bachelor of Science and a 
+					Master of Engineering in Computer Science. 
 				<br>
 				
 				<p>In my free time, I enjoy reading and spending time outdoors!
