--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="centerpiece">
         <img src="./images/face.jpg" alt="headshot">
         <h1>Militsa Sotirova</h1>
-        <p>Computer Science student @ Cornell University</p>
+        <p>Software Engineer @ MongoDB</p>
     </div>
 
     <div class="grid-container">
